Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/TryWithResources/ImplicitFinal.out
ImplicitFinal.java:14:13: compiler.err.try.resource.may.not.be.assigned: r
ImplicitFinal.java:20:13: compiler.err.try.resource.may.not.be.assigned: r1
ImplicitFinal.java:26:13: compiler.err.try.resource.may.not.be.assigned: r2
ImplicitFinal.java:32:13: compiler.err.try.resource.may.not.be.assigned: r3
4 errors
